--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,9 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap);
-
-
-
-
-
 body {
   font-family: Jost;
 }
@@ -524,7 +518,7 @@ a.text-black:focus,
 a.text-black.active {
   color: #000000 !important;
 }
-a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]) {
+a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-caption) {
   position: relative;
   background-image: transparent;
   background-size: 10000px 2px;
@@ -532,7 +526,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]) {
   background-position: 0px 1.2em;
   background-position: -10000px 1.2em;
 }
-a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):hover {
+a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-caption):hover {
   transition: background-position 2s ease-in-out;
   background-image: linear-gradient(currentColor 50%, currentColor 50%);
   background-position: 0px 1.2em;
@@ -1135,13 +1129,8 @@ a {
   padding-bottom: 3rem;
   background-color: #000000;
 }
-.cid-soHycAn9S1 .row {
-  margin-left: 0;
-  margin-right: 0;
-}
 .cid-soHycAn9S1 .item {
-  padding-left: 0;
-  padding-right: 0;
+  padding-bottom: 2rem;
 }
 .cid-soHycAn9S1 .item-wrapper {
   height: 300px;
@@ -1394,98 +1383,621 @@ a {
 .cid-soHycAn9S1 H3 {
   color: #ffffff;
 }
-.cid-soHI32hHAr {
+.cid-sE3UWRXGFq {
   padding-top: 2rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+.cid-sE3UWRXGFq .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sE3UWRXGFq .mbr-section-title,
+.cid-sE3UWRXGFq .mbr-section-subtitle,
+.cid-sE3UWRXGFq .mbr-text {
+  text-align: center;
+}
+.cid-sE3VBmY5wf {
+  padding-top: 0rem;
+  padding-bottom: 1rem;
+  background-color: #000000;
+}
+.cid-sE3VBmY5wf .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sE3VBmY5wf .mbr-section-title,
+.cid-sE3VBmY5wf .mbr-section-subtitle,
+.cid-sE3VBmY5wf .mbr-text {
+  text-align: center;
+}
+.cid-sE3VBmY5wf .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-sE3WbZC1Zk {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+.cid-sE3WbZC1Zk .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sE3WbZC1Zk .mbr-section-title,
+.cid-sE3WbZC1Zk .mbr-section-subtitle,
+.cid-sE3WbZC1Zk .mbr-text {
+  text-align: center;
+}
+.cid-soCAzi8mFm {
+  padding-top: 3rem;
   padding-bottom: 5rem;
   background-color: #ffffff;
 }
-.cid-soHI32hHAr .timeline-element {
-  position: relative;
+.cid-soCAzi8mFm .row-links {
+  width: 100%;
+  justify-content: center;
 }
-.cid-soHI32hHAr .timelines-container {
+.cid-soCAzi8mFm .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-soCAzi8mFm .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-soCAzi8mFm .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-soCAzi8mFm .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-soCAzi8mFm .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-soCAzi8mFm .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-end;
 }
-.cid-soHI32hHAr .image-wrapper img {
+.cid-soCAzi8mFm .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-soCAzi8mFm .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-soCAzi8mFm .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  transition: .2s linear;
+}
+.cid-soCAzi8mFm .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-soCAzi8mFm .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-soCAzi8mFm .media-container-row .row-copirayt {
+  word-break: break-word;
   width: 100%;
-  object-fit: cover;
 }
-.cid-soHI32hHAr .mbr-section-title,
-.cid-soHI32hHAr .mbr-section-subtitle,
-.cid-soHI32hHAr .timeline-date {
+.cid-soCAzi8mFm .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-soCAzi8mFm .media-container-row .mbr-text {
+  color: #000000;
+}
+.cid-sE3AfQBBTr {
+  padding-top: 6rem;
+  padding-bottom: 0rem;
+  background-color: #000000;
+}
+.cid-sE3AfQBBTr .mbr-section-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-sE3vvjZJpN {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #000000;
+}
+@media (max-width: 991px) {
+  .cid-sE3vvjZJpN .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sE3vvjZJpN .row {
+  flex-direction: row-reverse;
+}
+.cid-sE3vvjZJpN img {
+  width: 100%;
+}
+.cid-sE3vvjZJpN .mbr-text {
+  color: #ffffff;
   text-align: center;
 }
-.cid-soHI32hHAr .iconBackground {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  border: 2px solid #ff8a8a;
-  margin-left: -9px;
+.cid-sE3x29Ygoi {
+  padding-top: 4rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
 }
-@media (max-width: 767px) {
-  .cid-soHI32hHAr .iconBackground {
-    left: 15px;
-    top: 30px;
+@media (max-width: 991px) {
+  .cid-sE3x29Ygoi .image-wrapper {
+    margin-bottom: 1rem;
   }
 }
-@media (min-width: 768px) {
-  .cid-soHI32hHAr .iconBackground {
-    top: 70px;
-    left: 50%;
+.cid-sE3x29Ygoi .row {
+  flex-direction: row-reverse;
+}
+.cid-sE3x29Ygoi img {
+  width: 100%;
+}
+.cid-sE3tSGvD2N {
+  padding-top: 4rem;
+  padding-bottom: 3rem;
+  background-color: #000000;
+}
+@media (max-width: 991px) {
+  .cid-sE3tSGvD2N .image-wrapper {
+    margin-bottom: 1rem;
   }
 }
-.cid-soHI32hHAr .row:after {
-  content: "";
-  position: absolute;
-  background-color: #ff8a8a;
-  width: 2px;
+.cid-sE3tSGvD2N .row {
+  flex-direction: row-reverse;
 }
-@media (max-width: 767px) {
-  .cid-soHI32hHAr .row:after {
-    height: calc(100% + 30px);
-    top: 50px;
-    left: 15px;
-  }
+.cid-sE3tSGvD2N img {
+  width: 100%;
 }
-@media (min-width: 768px) {
-  .cid-soHI32hHAr .row:after {
-    height: calc(100% + 28px);
-    top: 90px;
-    left: 50%;
-  }
+.cid-sE3tSGvD2N .mbr-text {
+  color: #ffffff;
 }
-@media (max-width: 767px) {
-  .cid-soHI32hHAr .timeline-date-wrapper,
-  .cid-soHI32hHAr .timeline-text-wrapper,
-  .cid-soHI32hHAr .image-wrapper {
-    padding: 0rem;
-    padding-left: 2rem;
-  }
-  .cid-soHI32hHAr .mbr-timeline-date {
-    text-align: center !important;
-  }
-  .cid-soHI32hHAr .mbr-timeline-title {
-    text-align: center;
-    margin-top: 1rem;
+.cid-sE3wsmShON {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-sE3wsmShON .image-wrapper {
+    margin-bottom: 1rem;
   }
 }
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-soHI32hHAr .timeline-date-wrapper,
-  .cid-soHI32hHAr .timeline-text-wrapper {
-    padding: 1rem;
+.cid-sE3wsmShON .row {
+  flex-direction: row-reverse;
+}
+.cid-sE3wsmShON img {
+  width: 100%;
+}
+.cid-sE3xJGMt53 {
+  padding-top: 6rem;
+  padding-bottom: 3rem;
+  background-color: #000000;
+}
+@media (max-width: 991px) {
+  .cid-sE3xJGMt53 .image-wrapper {
+    margin-bottom: 1rem;
   }
+}
+.cid-sE3xJGMt53 .row {
+  flex-direction: row-reverse;
+}
+.cid-sE3xJGMt53 img {
+  width: 100%;
+}
+.cid-sE3xJGMt53 .mbr-text {
+  color: #ffffff;
+}
+.cid-sE3yA0RBEZ {
+  padding-top: 4rem;
+  padding-bottom: 2rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-sE3yA0RBEZ .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sE3yA0RBEZ .row {
+  flex-direction: row-reverse;
+}
+.cid-sE3yA0RBEZ img {
+  width: 100%;
+}
+.cid-sE3z84ThUa {
+  padding-top: 4rem;
+  padding-bottom: 2rem;
+  background-color: #000000;
+}
+@media (max-width: 991px) {
+  .cid-sE3z84ThUa .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sE3z84ThUa .row {
+  flex-direction: row-reverse;
+}
+.cid-sE3z84ThUa img {
+  width: 100%;
+}
+.cid-sE3z84ThUa .mbr-text {
+  color: #ffffff;
+}
+.cid-sE4AizBsFY {
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-sE4AizBsFY .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sE4AizBsFY .row {
+  flex-direction: row-reverse;
+}
+.cid-sE4AizBsFY img {
+  width: 100%;
 }
 @media (min-width: 992px) {
-  .cid-soHI32hHAr .timeline-date-wrapper,
-  .cid-soHI32hHAr .timeline-text-wrapper,
-  .cid-soHI32hHAr .image-wrapper {
+  .cid-sE4AizBsFY .text-wrapper {
     padding: 2rem;
   }
 }
+.cid-soBYLgF76H {
+  z-index: 1000;
+  width: 100%;
+}
+.cid-soBYLgF76H nav.navbar {
+  position: fixed;
+}
+.cid-soBYLgF76H .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-soBYLgF76H .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-soBYLgF76H .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-soBYLgF76H .dropdown-item:hover,
+.cid-soBYLgF76H .dropdown-item:focus {
+  background: #6592e6 !important;
+  color: white !important;
+}
+.cid-soBYLgF76H .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-soBYLgF76H .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-soBYLgF76H .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-soBYLgF76H .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-soBYLgF76H .nav-link {
+  position: relative;
+}
+.cid-soBYLgF76H .container {
+  display: flex;
+  margin: auto;
+}
+.cid-soBYLgF76H .iconfont-wrapper {
+  color: #ffffff !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-soBYLgF76H .dropdown-menu,
+.cid-soBYLgF76H .navbar.opened {
+  background: #353535 !important;
+}
+.cid-soBYLgF76H .nav-item:focus,
+.cid-soBYLgF76H .nav-link:focus {
+  outline: none;
+}
+.cid-soBYLgF76H .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-soBYLgF76H .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-soBYLgF76H .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-soBYLgF76H .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-soBYLgF76H .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-soBYLgF76H .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-soBYLgF76H .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  background: rgba(53, 53, 53, 0.8);
+}
+.cid-soBYLgF76H .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-soBYLgF76H .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-soBYLgF76H .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-soBYLgF76H .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-soBYLgF76H .navbar.collapsed {
+  justify-content: center;
+}
+.cid-soBYLgF76H .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-soBYLgF76H .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+.cid-soBYLgF76H .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-soBYLgF76H .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-soBYLgF76H .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-soBYLgF76H .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-soBYLgF76H .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-soBYLgF76H .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-soBYLgF76H .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-soBYLgF76H .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-soBYLgF76H .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-soBYLgF76H .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-soBYLgF76H .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-soBYLgF76H .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-soBYLgF76H .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-soBYLgF76H .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-soBYLgF76H .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-soBYLgF76H .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-soBYLgF76H .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-soBYLgF76H .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-soBYLgF76H .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-soBYLgF76H .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-soBYLgF76H .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-soBYLgF76H .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-soBYLgF76H .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-soBYLgF76H .dropdown-item.active,
+.cid-soBYLgF76H .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-soBYLgF76H .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-soBYLgF76H .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-soBYLgF76H .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-soBYLgF76H .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #353535;
+}
+.cid-soBYLgF76H .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-soBYLgF76H .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-soBYLgF76H ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-soBYLgF76H .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-soBYLgF76H button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-soBYLgF76H nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-soBYLgF76H nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-soBYLgF76H nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-soBYLgF76H nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-soBYLgF76H .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-soBYLgF76H a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-soBYLgF76H .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-soBYLgF76H .navbar {
+    height: 70px;
+  }
+  .cid-soBYLgF76H .navbar.opened {
+    height: auto;
+  }
+  .cid-soBYLgF76H .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
 .cid-soCAzi8mFm {
-  padding-top: 1rem;
-  padding-bottom: 8rem;
+  padding-top: 3rem;
+  padding-bottom: 5rem;
   background-color: #ffffff;
 }
 .cid-soCAzi8mFm .row-links {
