--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1630,26 +1630,21 @@ a {
 .cid-sE3z84ThUa .mbr-text {
   color: #ffffff;
 }
-.cid-sE4AizBsFY {
-  padding-top: 3rem;
-  padding-bottom: 1rem;
+.cid-sLkTY21Opk {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   background-color: #ffffff;
 }
 @media (max-width: 991px) {
-  .cid-sE4AizBsFY .image-wrapper {
+  .cid-sLkTY21Opk .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-sE4AizBsFY .row {
+.cid-sLkTY21Opk .row {
   flex-direction: row-reverse;
 }
-.cid-sE4AizBsFY img {
+.cid-sLkTY21Opk img {
   width: 100%;
-}
-@media (min-width: 992px) {
-  .cid-sE4AizBsFY .text-wrapper {
-    padding: 2rem;
-  }
 }
 .cid-soBYLgF76H {
   z-index: 1000;
@@ -1994,6 +1989,481 @@ a {
     max-width: calc(100% + 2rem);
     left: -1rem;
   }
+}
+.cid-soCAzi8mFm {
+  padding-top: 1rem;
+  padding-bottom: 8rem;
+  background-color: #bbbbbb;
+}
+.cid-soCAzi8mFm .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-soCAzi8mFm .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-soCAzi8mFm .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-soCAzi8mFm .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-soCAzi8mFm .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-soCAzi8mFm .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-soCAzi8mFm .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.cid-soCAzi8mFm .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-soCAzi8mFm .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-soCAzi8mFm .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  transition: .2s linear;
+}
+.cid-soCAzi8mFm .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-soCAzi8mFm .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-soCAzi8mFm .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-soCAzi8mFm .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-soCAzi8mFm .media-container-row .mbr-text {
+  color: #000000;
+}
+.cid-soBYLgF76H {
+  z-index: 1000;
+  width: 100%;
+}
+.cid-soBYLgF76H nav.navbar {
+  position: fixed;
+}
+.cid-soBYLgF76H .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-soBYLgF76H .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-soBYLgF76H .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-soBYLgF76H .dropdown-item:hover,
+.cid-soBYLgF76H .dropdown-item:focus {
+  background: #6592e6 !important;
+  color: white !important;
+}
+.cid-soBYLgF76H .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-soBYLgF76H .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-soBYLgF76H .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-soBYLgF76H .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-soBYLgF76H .nav-link {
+  position: relative;
+}
+.cid-soBYLgF76H .container {
+  display: flex;
+  margin: auto;
+}
+.cid-soBYLgF76H .iconfont-wrapper {
+  color: #ffffff !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-soBYLgF76H .dropdown-menu,
+.cid-soBYLgF76H .navbar.opened {
+  background: #353535 !important;
+}
+.cid-soBYLgF76H .nav-item:focus,
+.cid-soBYLgF76H .nav-link:focus {
+  outline: none;
+}
+.cid-soBYLgF76H .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-soBYLgF76H .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-soBYLgF76H .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-soBYLgF76H .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-soBYLgF76H .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-soBYLgF76H .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-soBYLgF76H .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  background: rgba(53, 53, 53, 0.8);
+}
+.cid-soBYLgF76H .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-soBYLgF76H .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-soBYLgF76H .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-soBYLgF76H .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-soBYLgF76H .navbar.collapsed {
+  justify-content: center;
+}
+.cid-soBYLgF76H .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-soBYLgF76H .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+.cid-soBYLgF76H .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-soBYLgF76H .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-soBYLgF76H .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-soBYLgF76H .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-soBYLgF76H .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-soBYLgF76H .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-soBYLgF76H .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-soBYLgF76H .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-soBYLgF76H .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-soBYLgF76H .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-soBYLgF76H .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-soBYLgF76H .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-soBYLgF76H .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-soBYLgF76H .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-soBYLgF76H .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-soBYLgF76H .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-soBYLgF76H .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-soBYLgF76H .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-soBYLgF76H .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-soBYLgF76H .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-soBYLgF76H .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-soBYLgF76H .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-soBYLgF76H .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-soBYLgF76H .dropdown-item.active,
+.cid-soBYLgF76H .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-soBYLgF76H .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-soBYLgF76H .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-soBYLgF76H .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-soBYLgF76H .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #353535;
+}
+.cid-soBYLgF76H .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-soBYLgF76H .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-soBYLgF76H ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-soBYLgF76H .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-soBYLgF76H button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-soBYLgF76H button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-soBYLgF76H nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-soBYLgF76H nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-soBYLgF76H nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-soBYLgF76H nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-soBYLgF76H .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-soBYLgF76H a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-soBYLgF76H .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-soBYLgF76H .navbar {
+    height: 70px;
+  }
+  .cid-soBYLgF76H .navbar.opened {
+    height: auto;
+  }
+  .cid-soBYLgF76H .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-sLkJ9qPYQA {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sLkJ9qPYQA img,
+.cid-sLkJ9qPYQA .item-img {
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-sLkJ9qPYQA .item:focus,
+.cid-sLkJ9qPYQA span:focus {
+  outline: none;
+}
+.cid-sLkJ9qPYQA .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-sLkJ9qPYQA .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-sLkJ9qPYQA .item-wrapper .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-sLkJ9qPYQA .item-wrapper .item-footer {
+    padding: 0 2rem 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sLkJ9qPYQA .item-wrapper .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-sLkJ9qPYQA .item-wrapper .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-sLkJ9qPYQA .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-sLkJ9qPYQA .mbr-section-title {
+  color: #232323;
+}
+.cid-sLkJ9qPYQA .mbr-text,
+.cid-sLkJ9qPYQA .mbr-section-btn {
+  text-align: left;
+}
+.cid-sLkJ9qPYQA .item-title {
+  text-align: left;
+}
+.cid-sLkJ9qPYQA .item-subtitle {
+  text-align: left;
+  color: #232323;
 }
 .cid-soCAzi8mFm {
   padding-top: 3rem;
