--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1026,6 +1026,7 @@ a {
 .cid-soBYSHsOrN {
   background-image:  url("../../../assets/images/bg2.png");
    left: -1px;
+  height: 1200px;
   
   
 }
