--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1024,7 +1024,7 @@ a {
   }
 }
 .cid-soBYSHsOrN {
-  background-image:  url("../../../assets/images/bg2.png");
+  background-image:  url("../../../assets/images/fateen-bg.png");
    left: -1px;
   height: 1200px;
   
